* Fixed a bug where it was impossible to stay disconnected
* Connect/disconnect/reconnect affect each connection of a profile
* Multiple commands can be used at once with a semicolon delimiter
* Added a 'rejoin' command
* Added tab-completion style slash command completion
* Fixed a bug where tab-completion would select all text with certain look and feels
* Added a "What's New" window

2.0.2.2 (r1022) 2007-12-22:
* Fixed a bug that prevented banning users outside of the channel
* Allow editing cdkeys from the connection settings window
* Closing profiles
* Pressing the 'cancel' button on 'new profile' settings window closes the profile
* Pressing the 'cancel' button when no CD keys are entered will not bring the window back
* Fixed a bug where 'apply' didn't redraw the window correctly
* Fixed a bug with lowercase CD keys
* Improved version comparison logic

2.0.2.1 (r1000) 2007-12-12:
* Extended Settings read/write methods
* Fixed a bug where the CLI would cause 100% CPU use
* Added an option to change the profile in the GUI
* Fixed a bug where plugins would receive initialize() twice
* Add settings menu items for each connection of a profile
* Secondary EHs now receive titleChanged()
* Better discovery of JDBC drivers
* Fixed a bug with 'new profile'
* Added a <Connection> field to plugin events
* Changed HTMLOutputEventHandler to use profile-specific userlists/logs
* Moved anti-idle, trigger, and enableGreetings to profile-specific settings
* Improved Database.getUser(BNetUser)
* Quick 'add' command
* Fixed a bug caused by the BNetUser cache

2.0.2 (r978) 2007-12-07:
* Started the change log
* Added a tab to the settings window to configure debug logging
* Allow / commands to be passed through parseCommand()
* Switched the DB editor to use ConfigTextAreas
* Fixed a bug where profiles with multiple connections would connect out of order
* Improved the SortedProperties class to use safer operations, and to include sorting of the keySet() method