@@ -14,6 +14,7 @@
 * Added tab-completion style slash command completion
 * Fixed a bug where tab-completion would select all text with certain look and feels
 * Added a "What's New" window
+* Customizable BNetUser.toString()
 
 2.0.2.2 (r1022) 2007-12-22:
 * Fixed a bug that prevented banning users outside of the channel
